Added contact controller
