# models/contactModel.go
@@ -1,0 +1,6 @@
+package models
+
+type Contact struct {
+	Name      *string `json:"name" validate:"required"`
+	Cellphone *string `json:"cellphone" validate:"required"`
+}
