# models/importContactsRequestModel.go
@@ -1,0 +1,5 @@
+package models
+
+type ImportContactsRequest struct {
+	Contacts *[]Contact `json:"contacts"`
+}
