# models/signupRequestModel.go
@@ -1,7 +1,7 @@
 package models
 
 type SignupRequest struct {
-	Username *string
-	Password *string
-	UserType *string
+	Username *string `json:"username" validate:"required"`
+	Password *string `json:"password" validate:"required"`
+	UserType *string `json:"user_type" validate:"required"`
 }
